fix: missing margins, broken radios, update ui

--- a/webapp/src/components/NFTListPage/ArrayFilter/ArrayFilter.css
+++ b/webapp/src/components/NFTListPage/ArrayFilter/ArrayFilter.css
@@ -1,13 +1,3 @@
-.ArrayFilter {
-  display: flex;
-  flex-direction: column;
-}
-
-.ArrayFilter .ui.sub.header.name {
-  margin-bottom: 12px;
-  font-weight: 600;
-}
-
 .ArrayFilter .options {
   display: flex;
   flex-flow: wrap;
