--- a/webapp/src/themes/components/Radio.css
+++ b/webapp/src/themes/components/Radio.css
@@ -4,7 +4,7 @@
   height: 26px;
 }
 
-.ui.checkbox.checked input.hidden + label:after {
+.ui.radio.checkbox.checked input.hidden + label:after {
   top: 0px;
   left: -1px;
   width: 29px;
